--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
-.produit-carte{
+.card{
     border: 1px solid black;
 }
 
-.produit-carte-panier{
+.cartCard{
     border: 1px solid rgb(0, 48, 94)
 
+}
+
+.hidden{
+    display: none;
 }
