--- a/style.css
+++ b/style.css
@@ -1,9 +1,159 @@
+:root{
+    --green-lightcolor :rgb(151, 206, 79);
+    --green-darkcolor :rgb(53, 82, 36);
+    --beige-lightcolor :rgb(201, 167, 93);
+    --beige-darkcolor :rgb(173, 137, 57);
+}
+
+*{
+    box-sizing: border-box;
+}
+
+body{
+    margin: 0;
+    padding: 0;
+
+    display: flex;
+    flex-direction: column;
+    
+
+}
+
+header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+main{
+    display: flex;
+    flex-direction: column;
+}
+
+#boutique{
+    display: flex;
+    flex-direction: column;
+    background-color: var(--green-darkcolor);
+    
+}
+
+h2{
+    align-self: center;
+}
+
+.grid-produits{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap:10px;
+
+    padding: 20px;
+}
+
+
 .card{
-    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    padding: 20px 10px;
+    width: 200px;
+
+    
+    background-color: var(--beige-lightcolor);
+    border-radius: 20px;
+}
+
+.card__img{
+    border-radius: 50%;
+}
+
+.card__addToCartBttn{
+    border-style: none;
+    padding: 5px 10px;
+    background-color: var(--green-lightcolor);
+    border-radius: 10px;
+}
+
+
+#panier-section{
+    display: flex;
+    flex-direction: column;
+    background-color: var(--green-lightcolor)
 }
 
 .cartCard{
-    border: 1px solid rgb(0, 48, 94)
+    display: flex;
+    align-items: center;
+    position: relative;
+
+}
+
+.cartCard:nth-child(even){
+    background-color: var(--beige-darkcolor);
+}
+.cartCard:nth-child(odd){
+    background-color: var(--beige-lightcolor);
+}
+.cartCard__img{
+    padding: 10px;
+    height: 100px;
+    order : 0;
+    border-radius: 20px;
+}
+
+.cartCard__name{
+    order: 1;
+    padding-right: 20px;
+}
+
+.cartCard__price{
+    order: 2;
+    padding-right: 20px;
+}
+
+.cartCard__amountWrapper{
+    order: 3;
+    margin: 0 20px 0 auto;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.cartCard__amountWrapper button{
+    
+    height: 20px;
+    width:20px;
+    background-color: var(--green-lightcolor);
+    border-style: none;
+    border-radius: 5px;
+}
+
+.cartCard__amountWrapper__removeFromCartBttn{
+    order: 0;
+}
+
+.cartCard__amountWrapper__amount{
+    order: 1;
+
+    margin: 0 10px;
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+.cartCard__amountWrapper__addToCartBttn{
+    order: 2;
+}
+
+
+.cartCard__subtotal{
+    order: 4;
+    margin : 0 20px 0 0;
+    width: 75px;
+    text-align: right;
+    font-weight: 700;
+    font-size: 1.3rem;
 
 }
 
