--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root{
-    --green-lightcolor :rgb(151, 206, 79);
+    --green-lightcolor :rgb(125, 160, 59);
     --green-darkcolor :rgb(53, 82, 36);
     --beige-lightcolor :rgb(201, 167, 93);
     --beige-darkcolor :rgb(173, 137, 57);
@@ -15,27 +15,37 @@ body{
 
     display: flex;
     flex-direction: column;
-    
-
 }
 
 header{
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
 
 main{
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    
 }
 
 #boutique{
     display: flex;
     flex-direction: column;
     background-color: var(--green-darkcolor);
-    
+}
+
+@media (max-width: 1100px) {
+ 
+    main{
+        flex-direction: column;
+    }
+
+    #boutique{
+        width: 100%;
+    }
 }
 
 h2{
@@ -69,6 +79,14 @@ h2{
     border-radius: 50%;
 }
 
+.card h3{
+    margin: 5px;
+}
+
+.card__price{
+    margin: 5px;
+
+}
 .card__addToCartBttn{
     border-style: none;
     padding: 5px 10px;
@@ -80,20 +98,29 @@ h2{
 #panier-section{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    flex-grow: 2;
+
     background-color: var(--green-lightcolor)
+}
+
+#panier-liste{
+    align-self: stretch;
 }
 
 .cartCard{
     display: flex;
     align-items: center;
-    position: relative;
-
-}
-
-.cartCard:nth-child(even){
     background-color: var(--beige-darkcolor);
+    width: 600px;
 }
-.cartCard:nth-child(odd){
+@media (max-width: 1100px) {
+ 
+    .cartCard{
+        width: 100%;
+    }
+}
+.odd{
     background-color: var(--beige-lightcolor);
 }
 .cartCard__img{
@@ -152,10 +179,67 @@ h2{
     margin : 0 20px 0 0;
     width: 75px;
     text-align: right;
-    font-weight: 700;
+    font-weight: bold;
     font-size: 1.3rem;
 
 }
+
+
+.total-section {
+    text-align: right;
+    align-self: stretch;
+    margin : 0 20px 0 0;
+    font-size: 1.3rem;
+    font-weight: bold;
+
+}
+
+.commande-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    gap: 10px;
+    padding: 20px;
+    margin: 20px;
+    width:400px;
+    background-color: var(--green-darkcolor);
+    border-radius: 20px;
+}
+
+.commande-box h3{
+    color: var(--beige-lightcolor);
+    font-size: 1.3rem;
+    text-transform: uppercase;
+}
+
+.feedback-error{
+    padding: 10px 20px;
+    color: white;
+    background-color: brown;
+    border-radius: 5px;
+    border: 2px dashed rgb(255, 0, 0);
+}
+
+#email-client{
+    text-align: center;
+    padding: 5px 40px;
+}
+
+#btn-commander{
+    padding: 5px 40px;
+    border: 3px ridge var(--beige-darkcolor);
+    background-color: var(--beige-lightcolor);
+
+}
+.feedback-valid{
+    padding: 10px 20px;
+    color: white;
+    background-color: var(--green-lightcolor);
+    border-radius: 5px;
+    border: 2px solid rgb(9, 255, 0);}
+
 
 .hidden{
     display: none;
